[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Logo.png" type="Texture" id=1]
[ext_resource path="res://Assets/Music/teampunk_peregon.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Menus/Main_Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Credits.png" type="Texture" id=4]
[ext_resource path="res://Assets/FFFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Main Menu/Loadingscreen.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.364706, 0.929412, 0.690196, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.45098, 0.101961, 0.329412, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.890196, 0.592157, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.521569, 0.733333, 0.835294, 1 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.10107
margin_right = 4.10107
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 1256.15, 333.763 )
scale = Vector2( 3.47199, 3.47199 )
texture = ExtResource( 1 )

[node name="Credits" type="Sprite" parent="."]
position = Vector2( 1558.14, 807.811 )
scale = Vector2( 1.78586, 1.78586 )
texture = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Loading" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Fullscreen" type="CheckBox" parent="."]
margin_left = 3.0
margin_top = 706.747
margin_right = 493.0
margin_bottom = 771.747
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "> Fullscreen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_top = 0.825
anchor_right = 0.106
anchor_bottom = 0.883
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
anchor_top = 0.725
anchor_right = 0.246
anchor_bottom = 0.807
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Play"]
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.890196, 0.137255, 1, 1 )
text = "PLAY!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="Play" to="." method="_on_Play_button_up"]
